# 2D_WENO-Solver

./: README.md
2D_WENO_Kokkos/: CMakeLists.txt
2D_WENO_Kokkos/ci/: 1flcl-run-ci-darwin-ppc-gcc.sh  flcl-run-ci-darwin-ppc-gcc-7.4.0-cuda-10.1-kokkos-3.0.00-cuda-debug.sh
2D_WENO_Kokkos/simulation/: CMakeLists.txt  README.md
2D_WENO_Kokkos/simulation/2D_WENO/: CMakeLists.txt  clean.sh  compile.sh
2D_WENO_Kokkos/simulation/2D_WENO/src_c/: BoundUpdate_mod.hpp  Controlpara.hpp  InviscidFlux.cpp  InviscidFlux.hpp  Timestep.hpp  WENO5-c.cpp
2D_WENO_Kokkos/simulation/2D_WENO/src_f/: Constant_mod.f90  Controlpara_mod.f90  Output.f90  WENO5-f.f90  WENO5_MAIN.f90
2D_WENO_Kokkos/src/: flcl-view-f.f90
